startup fixes